Cambio nombre de la clase 'Flippy' a 'Flipy' y cambios en el metodo comprarProducto