@@ -2,7 +2,7 @@ package TESTING_1;
 import java.util.ArrayList;
 
 public class Deposito<T> {
-    ArrayList<T> contenido;
+    private ArrayList<T> contenido;
     public Deposito() {
         contenido = new ArrayList<>();
     }
@@ -10,10 +10,10 @@ public class Deposito<T> {
         contenido.add(t);
     }
     public T getContenido() {
-        if(contenido.isEmpty()){
+        if(contenido.size() == 0){
             return null;
         } else {
-            return contenido.removeFirst();
+            return contenido.remove(0);
         }
     }
 
